--- a/compoil/src/main/res/values/colors.xml
+++ b/compoil/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="tiktok_cyan">#24f4ee</color>
+    <color name="tiktok_red">#fe1955</color>
 </resources>
